--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ body {
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   font-family: "Roboto";
+  color: aliceblue;
 }
 
 @keyframes gradient {
@@ -15,10 +16,6 @@ body {
   100% {
     background-position: 0% 50%;
   }
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 ul {
   list-style: none;
