--- a/src/components/FooterBtn/FooterBtn.module.scss
+++ b/src/components/FooterBtn/FooterBtn.module.scss
@@ -9,6 +9,9 @@
     padding: 20px;
     font-family: "Roboto";
     font-size: 1rem;
+    border-radius: 10px;
+    background-color: rgb(37, 36, 36);
+    color: white;
     &:hover {
       opacity: 0.8;
     }
