--- a/src/components/Comment/Comment.module.scss
+++ b/src/components/Comment/Comment.module.scss
@@ -1,40 +1,79 @@
 .comment {
-  section {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0;
-  }
-  img {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100px;
-    height: auto;
-  }
-  &__image {
-    position: absolute;
-    z-index: -4;
-    overflow: hidden;
-    background-color: black;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-  }
-  &__right {
-    display: flex;
-    flex-basis: 60%;
-  }
-  &__text {
-    margin-left: 130px;
-  }
-  &__time {
-    color: rgb(62, 61, 61);
-  }
-  figure {
-    display: flex;
-    cursor: pointer;
-    figcaption {
-      margin-left: 10px;
+    section {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 0;
     }
-  }
+    img {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100px;
+        height: auto;
+    }
+    &__image {
+        position: absolute;
+        z-index: -4;
+        overflow: hidden;
+        background-color: black;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+    }
+    &__right {
+        display: flex;
+        flex-basis: 60%;
+    }
+    &__text {
+        margin-left: 130px;
+    }
+    &__time {
+        color: rgb(62, 61, 61);
+    }
+    figure {
+        display: flex;
+        cursor: pointer;
+        figcaption {
+            margin-left: 10px;
+        }
+    }
+}
+@media (max-width: 400px) {
+    .comment {
+        section {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0;
+            margin-bottom: 20px;
+        }
+        img {
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 50px;
+            height: auto;
+        }
+        &__image {
+            position: absolute;
+            z-index: -4;
+            overflow: hidden;
+            background-color: black;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+        }
+        &__text {
+            margin-top: 50px;
+            margin-left: 0px;
+            p {
+                word-break: break-all;
+            }
+        }
+        figure {
+            display: flex;
+            cursor: pointer;
+            margin: 0;
+        }
+    }
 }
