--- a/src/components/CommentsList/CommentsList.module.scss
+++ b/src/components/CommentsList/CommentsList.module.scss
@@ -1,5 +1,11 @@
 .commentsList {
-  display: flex;
-  flex-direction: column;
-  margin: 80px 40px 30px 40px;
+    display: flex;
+    flex-direction: column;
+    margin: 80px 40px 30px 40px;
+}
+@media (max-width: 400px) {
+    .commentsList {
+        margin: 20px;
+        padding: 0;
+    }
 }
