--- a/src/components/FooterBtn/FooterBtn.module.scss
+++ b/src/components/FooterBtn/FooterBtn.module.scss
@@ -1,19 +1,31 @@
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 20px 80px;
-  button {
-    cursor: pointer;
-    border: none;
-    padding: 20px;
-    font-family: "Roboto";
-    font-size: 1rem;
-    border-radius: 10px;
-    background-color: rgb(37, 36, 36);
-    color: white;
-    &:hover {
-      opacity: 0.8;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 80px;
+    button {
+        cursor: pointer;
+        border: none;
+        padding: 20px;
+        font-family: "Roboto";
+        font-size: 1rem;
+        border-radius: 10px;
+        background-color: rgb(37, 36, 36);
+        color: white;
+        &:hover {
+            opacity: 0.8;
+        }
     }
-  }
+}
+@media (max-width: 400px) {
+    .footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 20px;
+        button {
+            flex-basis: 40%;
+            margin: 10px;
+        }
+    }
 }
