--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,29 @@
 body {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  font-family: "Roboto";
-  color: aliceblue;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    font-family: "Roboto";
+    color: aliceblue;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 @keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 ul {
-  list-style: none;
+    list-style: none;
+}
+@media (max-width: 400px) {
+    ul {
+        padding: 20px;
+    }
 }
