--- a/src/components/CommentsList/CommentsList.module.scss
+++ b/src/components/CommentsList/CommentsList.module.scss
@@ -5,7 +5,7 @@
 }
 @media (max-width: 400px) {
     .commentsList {
-        margin: 20px;
+        margin: 100px 20px;
         padding: 0;
     }
 }
