--- a/src/components/CommentsList/CommentsList.module.scss
+++ b/src/components/CommentsList/CommentsList.module.scss
@@ -3,6 +3,12 @@
     flex-direction: column;
     margin: 80px 40px 30px 40px;
 }
+@media (max-width: 750px) {
+    .commentsList {
+        margin: 100px 30px;
+        padding: 0;
+    }
+}
 @media (max-width: 400px) {
     .commentsList {
         margin: 100px 20px;
